--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <body>
     <div class="w3-top w3-hide-small">
         <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
-          <a href="index.html" class="w3-bar-item w3-button">HOME</a>
+          <a href="inde.html" class="w3-bar-item w3-button">HOME</a>
           <a href="Menu.html" class="w3-bar-item w3-button">MENU</a>
           <a href="About.html" class="w3-bar-item w3-button">ABOUT</a>
           <a href="Contact.html" class="w3-bar-item w3-button">CONTACT</a>
