did some changes

--- a/ContactForm.html
+++ b/ContactForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Registration Form</title>
+  <title>Contact Form</title>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
   <style>
@@ -79,19 +79,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif,15}
 <body>
     <div class="w3-top w3-hide-small">
         <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
-          <a href="inde.html" class="w3-bar-item w3-button">HOME</a>
+          <a href="index.html" class="w3-bar-item w3-button">HOME</a>
           <a href="Menu.html" class="w3-bar-item w3-button">MENU</a>
           <a href="About.html" class="w3-bar-item w3-button">ABOUT</a>
-          <a href="Contact.html" class="w3-bar-item w3-button">CONTACT</a>
+          <a href="ContactForm.html" class="w3-bar-item w3-button">CONTACT</a>
           <a href="#order" class="w3-bar-item w3-button">Order</a>
           <a href="#LogIn" class="w3-bar-item w3-button">Sign in/Up</a>
         </div>
       </div>
 <br><br><br><br>
-<h1 style="text-align: center; color: #EFEFEF;">Register Now&</h1>
-<h1 style="text-align: center; color: #EFEFEF;">Join Our Community!</h1>
+<h1 style="text-align: center; color: #EFEFEF; font-family: Amatic SC;">FYI! We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.
+
+  Reserve a table, ask for today's special or just send us a message:</h1>
   <div class="container">
-    <form action="submit_registration.php" method="post" enctype="multipart/form-data">
+    <form action="submit_Contact.php" method="post" enctype="multipart/form-data">
       <div class="clearfix">
         <label for="first_name">First Name</label>
         <input type="text" id="first_name" name="first_name" placeholder="Your first name.." required>
