--- a/Menu.html
+++ b/Menu.html
@@ -19,7 +19,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
           <a href="index.html" class="w3-bar-item w3-button">HOME</a>
           <a href="Menu.html" class="w3-bar-item w3-button">MENU</a>
           <a href="About.html" class="w3-bar-item w3-button">ABOUT</a>
-          <a href="Contact.html" class="w3-bar-item w3-button">CONTACT</a>
+          <a href="ContactForm.html" class="w3-bar-item w3-button">CONTACT</a>
           <a href="#order" class="w3-bar-item w3-button">Order</a>
           <a href="#LogIn" class="w3-bar-item w3-button">Sign in/Up</a>
         </div>
