--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <a href="index.html" class="w3-bar-item w3-button">HOME</a>
     <a href="Menu.html" class="w3-bar-item w3-button">MENU</a>
     <a href="About.html" class="w3-bar-item w3-button">ABOUT</a>
-    <a href="Contact.html" class="w3-bar-item w3-button">CONTACT</a>
+    <a href="ContactForm.html" class="w3-bar-item w3-button">CONTACT</a>
     <a href="" class="w3-bar-item w3-button">Order</a>
     <a href="" class="w3-bar-item w3-button">Sign in/Up</a>
     <div style="float: right; position: absolute; width: 150px; height: 150px;margin-left: 83%;">
