done working on contact page

--- a/ContactForm.html
+++ b/ContactForm.html
@@ -139,11 +139,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif,15}
         <input type="date" id="birthdate" name="birthdate" required>
       </div>
       <div class="clearfix">
-        <label for="meeting_time">Registeration Time</label>
+        <label for="meeting_time">Meeting Time</label>
         <input type="time" id="meeting_time" name="meeting_time" required>
       </div>
       <div class="clearfix">
-        <label for="meeting_datetime">Registeration Date & Time confirmation</label>
+        <label for="meeting_datetime">Meeting Date & Time confirmation</label>
         <input type="datetime-local" id="meeting_datetime" name="meeting_datetime" required>
       </div>
       <div class="clearfix">
