--- a/LogIn.html
+++ b/LogIn.html
@@ -302,16 +302,16 @@ body {
           Login
           <span class="underline"></span>
         </button>
-        <form class="form form-login">
+        <form class="form form-login" action="SignIn.php" method="POST">
           <fieldset>
-            <legend>Please, enter your email and password for login.</legend>
+            <legend>Please enter your email and password for login.</legend>
             <div class="input-block">
               <label for="login-email">E-mail</label>
-              <input id="login-email" type="email" required>
+              <input id="login-email" type="email" name="login-email" required>
             </div>
             <div class="input-block">
               <label for="login-password">Password</label>
-              <input id="login-password" type="password" required>
+              <input id="login-password" type="password" name="login-password" required>
             </div>
           </fieldset>
           <button type="submit" class="btn-login">Login</button>
@@ -322,23 +322,54 @@ body {
           Sign Up
           <span class="underline"></span>
         </button>
-        <form class="form form-signup">
+        <form class="form form-signup" action="SignUp.php" method="POST">
           <fieldset>
             <legend>Please, enter your email, password and password confirmation for sign up.</legend>
             <div class="input-block">
+            <label for="firstName">First name:</label>
+                  <input
+                    type="text"
+                    placeholder="First name"
+                    name ="firstName"
+                    id="firstName"
+                    required
+                  />
+            </div>
+            <div class="input-block">
+            <label for="LastName">Last name:</label>
+                  <input
+                    type="text"
+                    placeholder="Last name"
+                    name ="LastName"
+                    id="LastName"
+                    required
+                  />
+            </div>
+            <div class="input-block">
+                <label for="Phone">Phone:</label>
+                <input
+                  type="tel"
+                  placeholder="05********"
+                  name ="phone"
+                  id="phone"
+                  required
+                  />
+                
+            </div>
+            <div class="input-block">
               <label for="signup-email">E-mail</label>
-              <input id="signup-email" type="email" required>
+              <input id="signup-email" type="email" name="signup-email" placeholder="example@email.com" required>
             </div>
             <div class="input-block">
               <label for="signup-password">Password</label>
-              <input id="signup-password" type="password" required>
+              <input id="signup-password" name="signup-password" type="password" placeholder="Password" required>
             </div>
             <div class="input-block">
               <label for="signup-password-confirm">Confirm password</label>
-              <input id="signup-password-confirm" type="password" required>
+              <input id="signup-password-confirm" name="signup-password-confirm" type="password" placeholder="Confirm Password" required>
             </div>
           </fieldset>
-          <button type="submit" class="btn-signup">Continue</button>
+        <button type="submit" class="btn-signup" name="submit">Continue</button>
         </form>
       </div>
     </div>
