--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <div class="w3-top w3-hide-small">
   <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
     <a href="index.html" class="w3-bar-item w3-button">HOME</a>
-    <a href="Menu.html" class="w3-bar-item w3-button">MENU</a>
+    <a href="Menu1.php" class="w3-bar-item w3-button">MENU</a>
     <a href="About.html" class="w3-bar-item w3-button">ABOUT</a>
     <a href="ContactForm.html" class="w3-bar-item w3-button">CONTACT</a>
     <a href="" class="w3-bar-item w3-button">Order</a>
-    <a href="" class="w3-bar-item w3-button">Sign in/Up</a>
+    <a href="LogIn.html" class="w3-bar-item w3-button">Sign in/Up</a>
     <div style="float: right; position: absolute; width: 150px; height: 150px;margin-left: 83%;">
       <img src="images/BCM9-150ppp.jpg" style="width: 150px; height: 150px; position: absolute;">
     </div>
